# simple-storage-api

./: Cargo.toml  Dockerfile  README.md  TODO.md  test-people.http  test-todos.http  test.http
report/: reopen-database.html  reuse-database.html  with-state.html
src/: features.rs  main.rs  people.rs  state.rs  todos.rs
src/features/: db.rs  mod.rs  output.rs  tools.rs  tuples.rs
