[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Stefan Adolf <stefan.adolf@turbinekreuzberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ferris-says = "0.1"
strum = "0.19"
strum_macros = "0.19.4"
leveldb = "0.8"