[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Stefan Adolf <stefan.adolf@turbinekreuzberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ferris-says = "0.1"
strum = "0.19"
strum_macros = "0.19.4"
rusty-leveldb = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
multihash = "*"
tide = "0.14.0"
async-std = { version = "1.6.0", features = ["attributes"] }
hex = "0.4.2"