[package]
name = "simple-storage-api"
version = "0.1.0"
authors = ["Stefan Adolf <stefan.adolf@turbinekreuzberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ferris-says = "0.2.0"
strum = "0.20.0"
strum_macros = "0.20.1"
rusty-leveldb = "0.3.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_cbor = "0.11.1"
multihash = "0.13.1"
tide = "0.15.0"
async-std = { version = "1.7.0", features = ["attributes"] }
hex = "0.4.2"
log = "0.4.11"
env_logger = "0.8.2"
lazy_static = "1.4.0"
http-types = "2.8.0"
